# cosmic_rays_PA2022

./: CMakeLists.txt  GNUmakefile  README.md  comandos_shower  cosmic_rays.cc  init_vis.mac  plot.py  test.mac  vis.mac
include/: B1ActionInitialization.hh  B1Analysis.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1Hits.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SD.hh  B1SteppingAction.hh  B1TrackingAction.hh
src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1Hits.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SD.cc  B1SteppingAction.cc  B1TrackingAction.cc
